# rl-mcp-tool-gate

./: .gitignore  FEATURE_gate_decision_log.md  FEATURE_ground_truth_v2.md  README.md  RESULT_filters_impact.md  SCHEMA.md  SESSION_2026-06-01.md  pyproject.toml  upstreams.toml.example
data/synthetic/: catalog.json  catalog_v2.json  heldout.jsonl  heldout_v2.jsonl  seeds.jsonl  train.jsonl  train_v2.jsonl
docs/: ANALYSIS_sft_vs_rl.md  FUTURE_bandit_pivot.md  PIPELINE.md  RESULT_sft_baseline.md  SESSION_2026-06-01.md
hooks/: generic_signal.py  user_prompt_submit.py
scripts/: eval.sh  run_proxy.sh  smoke_proxy.py  train.sh
src/data_gen/: bootstrap.py  build_v2.py  heldout.py  pull_schemas.py  real_tools.py  seed_queries.py
src/eval/: afr_catalog.py  afr_eval.py  afr_extract.py  baselines.py  bootstrap_afr.py  dashboard.py  decision_log.py  metrics.py  pareto.py  qwen_baseline.py
src/gate/: budget.py  encoder.py  select.py
src/proxy/: config.py  control.py  decision_log.py  multiplex.py  server.py
src/train/: grpo.py  modal_train.py  reward.py  sampler.py  sft_loss.py  sft_train.py
tests/integration/: test_hook_to_proxy.py
tests/unit/: test_afr_catalog.py  test_afr_eval.py  test_afr_extract.py  test_afr_filters.py  test_baselines_bm25.py  test_bootstrap_ci.py  test_budget.py  test_config.py  test_dashboard.py  test_decision_log.py  test_eval_decision_log.py  test_generic_signal.py  test_grpo_loop.py  test_heldout_consistency.py  test_metrics.py  test_multiplex.py  test_multiplex_routing.py  test_pareto_harness.py  test_pull_schemas.py  test_real_tools.py  (+7 more)
